--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
             <td>amoled-90hz-alwas on display</td>
             <td>main 48mp-12+12</td>
             <td>4500mah 24w fast charging</td>
+            
             <td>1280980000</td>
         </tr>
-
-
-
     </table>
+    <dl>
+  <dt>Hot Drinks</dt>
+  <dd>- Coffee</dd>
+  <dd>- Nescafe</dd>
+  <dd>- Tee</dd>
+  <dt>Cold Drinks</dt>
+  <dd>- Red Bull</dd>
+  <dd>- Pepsi</dd>
+</dl>
 </body>
 </html>
